1999-12-21  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.5 released.

1999-12-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel-b-el.el (base64-encode-region): Allow the optional second arg
	`no-line-break'.
	(base64-external-encode-region): Likewise.
	(base64-internal-encode-region): Likewise.
	(base64-encode-string): Likewise.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-aut-login): Update to new api.

1999-12-14   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* digest-md5.el
	(digest-md5-digest-response): Add optional argument `qop'.
	(digest-md5-build-response-value): Use it.

1999-12-13   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* digest-md5.el (digest-md5-challenge): New variable.
	(digest-md5-nonce-count): New variable.
	(digest-md5-parse-digest-challenge-syntax-table): Fix document.
	(digest-md5-parse-digest-challenge): Add autoload cookie.
	(digest-md5-challenge): New macro.
	(digest-md5-build-response-value): New macro.
	(digest-md5-digest-response): Use it; Add autoload cookie.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en,README.ja,mime-en.sgml,mime-en.texi,mime-ja.sgml,
	mime-ja.texi: Update for the recent ML address and ftp site.

1999-12-13   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* digest-md5.el
	(digest-md5-parse-digest-challenge-syntax-table): New variable.
	(digest-md5-parse-digest-challenge): Use it; return parsed
	result as a property list.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-scram-md5-make-salted-pass): New function.
	* smtp.el (smtp-auth-scram-md5): Use `sasl-scram-md5-make-salted-pass'
	instead of `scram-md5-make-salted-pass' and `scram-md5-parse-server-msg-1'.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (digest-md5-parse-digest-challenge): Fix.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (digest-md5-digest-response): Update.
	(digest-md5-make-cnonce): New function.
	(digest-md5-parse-digest-challenge): New function.
