@@ -47,7 +47,22 @@
 ;;; Code:
 
 (require 'hmac-md5)
-(require 'scram-md5)
+
+(eval-when-compile
+  (require 'scram-md5)
+  (require 'digest-md5))
+
+(eval-and-compile
+  (autoload 'open-ssl-stream "ssl")
+  (autoload 'base64-decode-string "base64")
+  (autoload 'base64-encode-string "base64")
+  (autoload 'starttls-open-stream "starttls")
+  (autoload 'starttls-negotiate "starttls")
+  (autoload 'digest-md5-parse-digest-challenge "digest-md5")
+  (autoload 'digest-md5-digest-response "digest-md5")
+  (autoload 'scram-md5-make-salted-pass "scram-md5")
+  (autoload 'scram-md5-parse-server-msg-1 "scram-md5")
+  (autoload 'scram-md5-make-client-msg-1 "scram-md5"))
 
 ;;; CRAM-MD5
 (defun sasl-cram-md5 (username passphrase challenge)
